--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Welcome to HELabs</title>
     <style>
         body {
@@ -34,7 +35,7 @@
     <h1>Welcome to HELabs</h1>
     
     <div class="icon-container">
-        <a class="icon" href="https://github.com/HELabs" target="_blank">🐱</a>
+        <a class="icon" href="https://github.com/HELabs" target="_blank"><i class="fa fa-github" style="font-size:36px"></i></a>
         <a class="icon" href="mailto:the.immanuels.2020@gmail.com">✉️</a>
     </div>
 </body>
